# flatshell

./: .gitignore  Dockerfile  LICENSE  README.md
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
app/: Cargo.toml
app/src/: main.rs
crates/flat-ast/: Cargo.toml
crates/flat-ast/src/: ast.rs  expr.rs  lib.rs  pipe.rs  statement.rs
crates/flat-builtin/: Cargo.toml
crates/flat-builtin/src/: calc.rs  common.rs  darwin.rs  lib.rs  linux.rs  unix.rs
crates/flat-common/: Cargo.toml
crates/flat-common/src/: error.rs  result.rs
crates/flat-engine/: Cargo.toml
crates/flat-engine/src/: eval.rs  extract.rs  handler.rs  lib.rs  pipe.rs  process_handler.rs  sh_vars.rs  state.rs
crates/flat-parser/: Cargo.toml
crates/flat-parser/src/: investigate.rs  lexer.rs  lib.rs  lite_parser.rs  parser.rs  token.rs  utils.rs
crates/flat-terminal/: Cargo.toml
crates/flat-terminal/src/: ascii.rs  history.rs  lib.rs  line.rs  prompt.rs  terminal.rs
crates/fsh-ast/: Cargo.toml
crates/fsh-ast/src/: expr.rs  lib.rs  pipe.rs  statement.rs
crates/fsh-builtin/: Cargo.toml
crates/fsh-builtin/src/: common.rs  lib.rs  unix.rs
crates/fsh-common/: Cargo.toml
crates/fsh-common/src/: error.rs  lib.rs  path.rs  result.rs
crates/fsh-engine/: Cargo.toml
crates/fsh-engine/src/: eval.rs  extract.rs  lib.rs  process_handler.rs  sh_vars.rs  state.rs
crates/fsh-engine/src/builtin/: common.rs  unix.rs
crates/fsh-engine/src/pipe/: unix.rs
crates/fsh-parser/: Cargo.toml
crates/fsh-parser/src/: lexer.rs  lib.rs  lite_parser.rs  parser.rs  token.rs  utils.rs
crates/fsh-terminal/: Cargo.toml
crates/fsh-terminal/src/: history.rs  lib.rs  prompt.rs  terminal.rs
docs/: A.md  README.md  SECURITY.md  TODO.md  WORKER.md
fsh_development/: fsh.tex
fsh_development_pre/: fsh.tex
(+1 files in other folders)
