[package]
name = "fsh-engine"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.153"

# Internal
fsh-ast = {path = "../fsh-ast", version="0.0.1"}
fsh-common = {path = "../fsh-common", version="0.0.1"}