[package]
name = "fsh-terminal"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/rust-lang/libc/
libc = "0.2.138"

# Internal
fsh-common = {path = "../fsh-common", version="0.0.1"}
